Login and Main page tests plus settings